cloudexpo/src/objects/EDW_Proj_Dash_Trainer_Monthly__c.object
<CustomObject>
    <fields>
        <fullName>EDW_Club_Accounting_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Accounting Id</label>
        <referenceTo>Club__c</referenceTo>
        <relationshipLabel>Projection Dashboard Trainers Monthly</relationshipLabel>
        <relationshipName>Projection_Dashboard_Trainers_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EDW_Club_AcctId_TrainerEspId__c</fullName>
        <externalId>true</externalId>
        <label>Club_Accounting_Id &amp; EDW_Trainer_Esp_I</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDW_Last_Month_Actual__c</fullName>
        <label>Last Month Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_Past_Average_Actual__c</fullName>
        <label>Past Average Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_Renewal_Amount__c</fullName>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_This_Month_Actual__c</fullName>
        <label>This Month Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_This_Month_Goal__c</fullName>
        <label>This Month Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_This_Month_Projection__c</fullName>
        <label>This Month Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_This_Month_Variance__c</fullName>
        <label>This Month Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDW_Trainer_Esp_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer Esp Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projection_Dashboard_Trainers_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EDW_Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Projection Dashboard Trainers Monthly</label>
    <nameField>
        <label>Projection Dashboard Trainers Monthly Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projection Dashboard Trainers Monthly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>